// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User mutations addUser creates user correctly 1`] = `
{
  "addUser": {
    "administrator": false,
    "email": "e@mail.com",
    "first_name": "first",
    "id": Any<String>,
    "last_name": "last",
    "research_consent": false,
    "upstream_id": 1,
    "username": "username",
  },
}
`;

exports[`User mutations updateResearchConsent updates correctly 1`] = `
{
  "id": StringMatching /\\[a-f\\\\d\\]\\{8\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{12\\}/i,
}
`;

exports[`User queries currentUser shows current user when logged in 1`] = `
{
  "currentUser": {
    "administrator": false,
    "email": "e@mail.com",
    "first_name": "first",
    "id": StringMatching /\\[a-f\\\\d\\]\\{8\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{4\\}-\\[a-f\\\\d\\]\\{12\\}/i,
    "last_name": "last",
    "upstream_id": 1,
    "username": "user",
  },
}
`;

exports[`User queries user_course_summary returns courses with completions 1`] = `
{
  "currentUser": {
    "id": "20000000-0000-0000-0000-000000000102",
    "user_course_summary": [
      {
        "course": {
          "exercises": [
            {
              "course_id": "00000000-0000-0000-0000-000000000002",
              "id": "50000000-0000-0000-0000-000000000003",
              "max_points": 3,
              "name": "exercise 3",
              "part": null,
              "section": null,
            },
          ],
          "id": "00000000-0000-0000-0000-000000000002",
          "name": "course1",
        },
        "course_id": "00000000-0000-0000-0000-000000000002",
        "exercise_completions": [
          {
            "attempted": true,
            "completed": false,
            "exercise_completion_required_actions": [
              {
                "id": "66666666-0000-0000-0000-000000000003",
                "value": "TOO_MANY_DUCKS",
              },
            ],
            "exercise_id": "50000000-0000-0000-0000-000000000003",
            "id": "60000000-0000-0000-0000-000000000003",
            "n_points": 4,
            "timestamp": "1900-01-01T08:00:00.000Z",
          },
        ],
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
      {
        "course": {
          "exercises": [
            {
              "course_id": "00000000-0000-0000-0000-000000000001",
              "id": "50000000-0000-0000-0000-000000000001",
              "max_points": 2,
              "name": "exercise 1",
              "part": 1,
              "section": 1,
            },
            {
              "course_id": "00000000-0000-0000-0000-000000000001",
              "id": "50000000-0000-0000-0000-000000000002",
              "max_points": 3,
              "name": "exercise 2",
              "part": 1,
              "section": 2,
            },
          ],
          "id": "00000000-0000-0000-0000-000000000001",
          "name": "course2",
        },
        "course_id": "00000000-0000-0000-0000-000000000001",
        "exercise_completions": [
          {
            "attempted": null,
            "completed": true,
            "exercise_completion_required_actions": [],
            "exercise_id": "50000000-0000-0000-0000-000000000001",
            "id": "60000000-0000-0000-0000-000000000001",
            "n_points": 6,
            "timestamp": "2000-02-01T08:00:00.000Z",
          },
          {
            "attempted": null,
            "completed": false,
            "exercise_completion_required_actions": [],
            "exercise_id": "50000000-0000-0000-0000-000000000002",
            "id": "60000000-0000-0000-0000-000000000002",
            "n_points": 0,
            "timestamp": "1900-01-01T08:00:00.000Z",
          },
        ],
        "user_id": "20000000-0000-0000-0000-000000000102",
      },
    ],
  },
}
`;
